[package]
name = "sensor-data-etl"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-time-0_3"] }
postgres-openssl = "0.5"
openssl = "0.10"
bluer = { version = "0.17", features = ["bluetoothd", "l2cap"] }
time = { version = "0.3", features = ["formatting", "parsing"] }
log = "0.4"
env_logger = "0.10"
dotenv = "0.15"
url = "2.0"
futures-util = "0.3"
